2004-01-23  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/simple.c: 
	(set_pass_first): 
	(parse_rule_pass): implemented.
	(parse_rule_keyword): hook pass keyword.
	(simple_run): stop walking rule in case we meet a "pass" rule.

	(plugin_init): new option to process pas rule first, 
	if the user want to.
	
	(parse_ruleset_directive): if the "pass rules" first option was
	specified, add pass rules at the begining of the list.

2004-01-20   Gene R Gomez  <gene@gomezbrothers.com>

	* plugins/simple/ruleset:
	Cleaned up regex to remove some syslog dependencies (vigor.rules
	and a few others without sample logs remain).  Added honeyd.rules
	ruleset.

2004-01-15  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/ruleset/simple.rules (regex): 
	better rules.

	* plugins/simple/ruleset/grsecurity.rules: 
	* plugins/simple/ruleset/ssh.rules: 
	syslog independance...
	
	* src/lml-alert.c (generate_target): 
	reuse existing target if any. We need some kind of
	mechanism so that it is totally doable from the rulesets.

	* prelude-lml.conf.in (file): 
	update metalog default format.

2004-01-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c (log_file_new): 
	oops, set default ts_fmt.

2004-01-10  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c 
	(format_header, handle_escaped, format_common): 
	(format_tstamp): Re-worked, cleaned-up, with the 
	ability to tell where exactly in the log is the
	timestamp. Make it much more easy to add new hook
	for IDMEF field within the log.

	(SYSLOG_LOG_FMT): 
	(SYSLOG_TS_FMT): update to the newer format.

	* prelude-lml.conf.in: remove invalid section,
	use new log message configuration format.

2004-01-09  Gene Gomez  <gene@gomezbrothers.com>

        * plugins/simple/ruleset:
        id and revision tags added to all rules.  This should
	allow for better management and revisioning of the 
	rulesets.

2004-01-08  Gene Gomez  <gene@gomezbrothers.com>
